fixed button and spacing on registration page to link to login page

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -111,6 +111,10 @@ body {
 		right: 40px;
 		top: 150px;
 	}
+	span {
+		display: block;
+		padding:1em;
+	}
 
 }
 
